[package]
name = "lang"
version = "0.1.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>"
]
edition = "2018"
publish = false

[dependencies]
vm = { git = "https://github.com/pontem-network/sp-move-vm.git", branch = "compiler" }
mvm = { git = "https://github.com/pontem-network/sp-move-vm.git", branch = "compiler" }
move-core-types = { git = "https://github.com/pontem-network/sp-move-vm.git", branch = "compiler" }
move-vm-types = { git = "https://github.com/pontem-network/sp-move-vm.git", branch = "compiler" }
move-lang = { git = "https://github.com/pontem-network/sp-move-vm.git", branch = "compiler" }
move-ir-types = { git = "https://github.com/pontem-network/sp-move-vm.git", branch = "compiler" }
disassembler = { path = "disassembler", default-features = false }
compat = { path = "compat", package = "move-compat" }

serde = "=1.0.118"
serde_derive = "=1.0.118"
serde_json = "1.0.52"
log = "0.4"
env_logger = "0.7.1"
anyhow = "1.0.28"
rand = "0.7.3"
hex = "0.4.2"
itertools = "0.9.0"
walkdir = "2.3.1"

lsp-types = { version = "0.74.0", features = ["proposed"] }
codespan = { git = "https://github.com/RIg410/codespan.git", branch = "v0.8" }
codespan-reporting = { git = "https://github.com/RIg410/codespan.git", branch = "v0.8" }
codespan9 = { package = "codespan", version = "0.9.2" }
codespan-reporting9 = { package = "codespan-reporting", version = "0.9.2" }


# bech32 support
regex = "1.3.7"
lazy_static = "1.4.0"
bech32 = "0.7.2"

# ss58 prefix
blake2-rfc = "0.2.18"
rust-base58 = "0.0.4"

[dev-dependencies]
include_dir = "0.6.0"

[features]
diem_address = [
]
dfinance_address = [
]
ps_address = [
]